// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useEuiButtonColorCSS base 1`] = `
{
  "accent": {
    "map": undefined,
    "name": "fxxqbh-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#a11262;background-color:#FDDDE9;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(89.804% 29.02% 56.863% / 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(89.804% 29.02% 56.863% / 0.16);
          }
        }
   ;;label:base-accent;",
    "toString": [Function],
  },
  "accentSecondary": {
    "map": undefined,
    "name": "vwjfla-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#046e6b;background-color:#C9F3F0;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(0% 69.02% 66.667% / 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(0% 69.02% 66.667% / 0.16);
          }
        }
   ;;label:base-accentSecondary;",
    "toString": [Function],
  },
  "danger": {
    "map": undefined,
    "name": "1i2t6l5-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#a71627;background-color:#FDDDD8;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(93.333% 29.804% 28.235% / 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(93.333% 29.804% 28.235% / 0.16);
          }
        }
   ;;label:base-danger;",
    "toString": [Function],
  },
  "disabled": {
    "map": undefined,
    "name": "1a6zqyi-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#798EAF;background-color:#ECF1F9;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: undefined;
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: undefined;
          }
        }
   ;;label:base-disabled;",
    "toString": [Function],
  },
  "neutral": {
    "map": undefined,
    "name": "1wtgqs4-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#0f658a;background-color:#CFEEF7;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(5.098% 63.137% 78.824% / 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(5.098% 63.137% 78.824% / 0.16);
          }
        }
   ;;label:base-neutral;",
    "toString": [Function],
  },
  "primary": {
    "map": undefined,
    "name": "dkdxj8-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#1750ba;background-color:#D9E8FF;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(21.569% 53.333% 100% / 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(21.569% 53.333% 100% / 0.16);
          }
        }
   ;;label:base-primary;",
    "toString": [Function],
  },
  "risk": {
    "map": undefined,
    "name": "7zzpve-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#9e3a16;background-color:#FFDEBF;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(98.824% 52.157% 26.667% / 0.16);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(98.824% 52.157% 26.667% / 0.2);
          }
        }
   ;;label:base-risk;",
    "toString": [Function],
  },
  "success": {
    "map": undefined,
    "name": "1a6arpi-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#09724d;background-color:#C9F3E3;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(1.5686% 68.235% 49.412% / 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(1.5686% 68.235% 49.412% / 0.16);
          }
        }
   ;;label:base-success;",
    "toString": [Function],
  },
  "text": {
    "map": undefined,
    "name": "b1nign-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#1d2a3e;background-color:#FFFFFF;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(9.0196% 31.373% 72.941% / 0.08);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(9.0196% 31.373% 72.941% / 0.12);
          }
        }
   
              border: 1px solid #CAD3E2;
            ;;label:base-text;",
    "toString": [Function],
  },
  "warning": {
    "map": undefined,
    "name": "19lh30v-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#825803;background-color:#FDE9B5;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(91.765% 68.235% 0.39216% / 0.16);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(91.765% 68.235% 0.39216% / 0.2);
          }
        }
   ;;label:base-warning;",
    "toString": [Function],
  },
}
`;

exports[`useEuiButtonColorCSS empty 1`] = `
{
  "accent": {
    "map": undefined,
    "name": "17idgo9-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#a11262;    
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(89.804% 29.02% 56.863% / 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(89.804% 29.02% 56.863% / 0.16);
          }
        }
  ;;label:empty-accent;",
    "toString": [Function],
  },
  "accentSecondary": {
    "map": undefined,
    "name": "1t47tuc-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#046e6b;    
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(0% 69.02% 66.667% / 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(0% 69.02% 66.667% / 0.16);
          }
        }
  ;;label:empty-accentSecondary;",
    "toString": [Function],
  },
  "danger": {
    "map": undefined,
    "name": "2xgh68-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#a71627;    
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(93.333% 29.804% 28.235% / 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(93.333% 29.804% 28.235% / 0.16);
          }
        }
  ;;label:empty-danger;",
    "toString": [Function],
  },
  "disabled": {
    "map": undefined,
    "name": "1hlgk57-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#798EAF;    
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: undefined;
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: undefined;
          }
        }
  ;;label:empty-disabled;",
    "toString": [Function],
  },
  "neutral": {
    "map": undefined,
    "name": "131shwl-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#0f658a;    
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(5.098% 63.137% 78.824% / 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(5.098% 63.137% 78.824% / 0.16);
          }
        }
  ;;label:empty-neutral;",
    "toString": [Function],
  },
  "primary": {
    "map": undefined,
    "name": "g0a30-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#1750ba;    
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(21.569% 53.333% 100% / 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(21.569% 53.333% 100% / 0.16);
          }
        }
  ;;label:empty-primary;",
    "toString": [Function],
  },
  "risk": {
    "map": undefined,
    "name": "hll24f-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#9e3a16;    
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(98.824% 52.157% 26.667% / 0.16);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(98.824% 52.157% 26.667% / 0.2);
          }
        }
  ;;label:empty-risk;",
    "toString": [Function],
  },
  "success": {
    "map": undefined,
    "name": "y7hmi1-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#09724d;    
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(1.5686% 68.235% 49.412% / 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(1.5686% 68.235% 49.412% / 0.16);
          }
        }
  ;;label:empty-success;",
    "toString": [Function],
  },
  "text": {
    "map": undefined,
    "name": "1q5f4u9-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#1d2a3e;    
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(9.0196% 31.373% 72.941% / 0.08);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(9.0196% 31.373% 72.941% / 0.12);
          }
        }
  ;;label:empty-text;",
    "toString": [Function],
  },
  "warning": {
    "map": undefined,
    "name": "1injul9-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#825803;    
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled, [aria-disabled="true"]) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgb(91.765% 68.235% 0.39216% / 0.16);
            pointer-events: none;
          }
        }

        &:active:not(:disabled, [aria-disabled="true"]) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgb(91.765% 68.235% 0.39216% / 0.2);
          }
        }
  ;;label:empty-warning;",
    "toString": [Function],
  },
}
`;

exports[`useEuiButtonColorCSS fill 1`] = `
{
  "accent": {
    "map": undefined,
    "name": "3mx2qw-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#BC1E70;outline-color:#07101F;    
    &:hover:not(:disabled, [aria-disabled="true"]) {
        background-color: #A11262;
      }

      &:active:not(:disabled, [aria-disabled="true"]) {
        background-color: #831652;
      }
  ;;label:fill-accent;",
    "toString": [Function],
  },
  "accentSecondary": {
    "map": undefined,
    "name": "1xku66d-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#008B87;outline-color:#07101F;    
    &:hover:not(:disabled, [aria-disabled="true"]) {
        background-color: #047471;
      }

      &:active:not(:disabled, [aria-disabled="true"]) {
        background-color: #065B58;
      }
  ;;label:fill-accentSecondary;",
    "toString": [Function],
  },
  "danger": {
    "map": undefined,
    "name": "2oco3v-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#C61E25;outline-color:#07101F;    
    &:hover:not(:disabled, [aria-disabled="true"]) {
        background-color: #A71627;
      }

      &:active:not(:disabled, [aria-disabled="true"]) {
        background-color: #7F1F27;
      }
  ;;label:fill-danger;",
    "toString": [Function],
  },
  "disabled": {
    "map": undefined,
    "name": "fophfq-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#798EAF;background-color:#ECF1F9;outline-color:;    
    &:hover:not(:disabled, [aria-disabled="true"]) {
        background-color: undefined;
      }

      &:active:not(:disabled, [aria-disabled="true"]) {
        background-color: undefined;
      }
  ;;label:fill-disabled;",
    "toString": [Function],
  },
  "neutral": {
    "map": undefined,
    "name": "bbkhg6-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#1C8CB5;outline-color:#07101F;    
    &:hover:not(:disabled, [aria-disabled="true"]) {
        background-color: #0F658A;
      }

      &:active:not(:disabled, [aria-disabled="true"]) {
        background-color: #055476;
      }
  ;;label:fill-neutral;",
    "toString": [Function],
  },
  "primary": {
    "map": undefined,
    "name": "e636tq-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#0B64DD;outline-color:#07101F;    
    &:hover:not(:disabled, [aria-disabled="true"]) {
        background-color: #1750BA;
      }

      &:active:not(:disabled, [aria-disabled="true"]) {
        background-color: #154399;
      }
  ;;label:fill-primary;",
    "toString": [Function],
  },
  "risk": {
    "map": undefined,
    "name": "1ldxfkn-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#ED6723;outline-color:#07101F;    
    &:hover:not(:disabled, [aria-disabled="true"]) {
        background-color: #DB541B;
      }

      &:active:not(:disabled, [aria-disabled="true"]) {
        background-color: #C24411;
      }
  ;;label:fill-risk;",
    "toString": [Function],
  },
  "success": {
    "map": undefined,
    "name": "9ubir6-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#008A5E;outline-color:#07101F;    
    &:hover:not(:disabled, [aria-disabled="true"]) {
        background-color: #09724D;
      }

      &:active:not(:disabled, [aria-disabled="true"]) {
        background-color: #0C5A3F;
      }
  ;;label:fill-success;",
    "toString": [Function],
  },
  "text": {
    "map": undefined,
    "name": "3cvc1q-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#5A6D8C;outline-color:#07101F;    
    &:hover:not(:disabled, [aria-disabled="true"]) {
        background-color: #485975;
      }

      &:active:not(:disabled, [aria-disabled="true"]) {
        background-color: #384861;
      }
  ;;label:fill-text;",
    "toString": [Function],
  },
  "warning": {
    "map": undefined,
    "name": "fapwex-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#6A4906;background-color:#FACB3D;outline-color:#07101F;    
    &:hover:not(:disabled, [aria-disabled="true"]) {
        background-color: #F5BC00;
      }

      &:active:not(:disabled, [aria-disabled="true"]) {
        background-color: #EAAE01;
      }
  ;;label:fill-warning;",
    "toString": [Function],
  },
}
`;

exports[`useEuiButtonFocusCSS 1`] = `
{
  "map": undefined,
  "name": "1w5psrn-focusCSS",
  "next": undefined,
  "styles": ";",
  "toString": [Function],
}
`;
